--- a/FE/index.html
+++ b/FE/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-success">
+      <nav class="navbar navbar-expand-lg bg-success fixed-top">
         <div class="container-fluid">
           <!-- Logo di Kiri -->
           <i class="fa-solid fa-leaf"></i>
@@ -101,7 +101,7 @@
           font-size: larger;
         "
       >
-        <div>
+        <div class="p-5">
           <h1 class="display-1 fw-bold">Ecolearn</h1>
           <p class="fs-3">Edukasi adalah kunci perubahan.</p>
           <p class="fs-3">
@@ -164,15 +164,6 @@
           </div>
         </div>
       </div>
-    </footer>
-    
-
-      <!-- Bootstrap Icons dan FontAwesome -->
-      <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
-      <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      />
     </footer>
     <!-- CDN for Bootstrap -->
     <script
