change: file direction

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
     <header>
@@ -53,14 +53,14 @@
                 <a
                   class="nav-link active fw-semibold text-white"
                   aria-current="page"
-                  href="./index.html"
+                  href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link fw-semibold text-white"
-                  href="./html/article.html"
+                  href="article.html"
                   >Article</a
                 >
               </li>
@@ -76,10 +76,10 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item fw-semibold" href="#">kalkulator</a>
+                    <a class="dropdown-item fw-semibold" href="kalkulator.html">Kalkulator</a>
                   </li>
                   <li>
-                    <a class="dropdown-item fw-semibold" href="#"
+                    <a class="dropdown-item fw-semibold" href="tips-trick.html"
                       >Tips and Trick</a
                     >
                   </li>
@@ -94,7 +94,7 @@
       <div
         class="bg-image text-white text-start d-flex align-items-up p-5"
         style="
-          background-image: url('./img/Lindungi-hutan.webp');
+          background-image: url('img/Lindungi-hutan.webp');
           height: 100vh;
           background-size: cover;
           background-position: center;
