change: direction file

--- a/src/html/article.html
+++ b/src/html/article.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./src/styles/styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -58,9 +58,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link fw-semibold text-white"
-                  href="./src/html/article.html"
+                <a class="nav-link fw-semibold text-white" href="article.html"
                   >Article</a
                 >
               </li>
@@ -76,10 +74,12 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item fw-semibold" href="./src/html/kalkulator.html">Kalkulator</a>
+                    <a class="dropdown-item fw-semibold" href="kalkulator.html"
+                      >Kalkulator</a
+                    >
                   </li>
                   <li>
-                    <a class="dropdown-item fw-semibold" href="./src/html/tips-trick.html"
+                    <a class="dropdown-item fw-semibold" href="tips-trick.html"
                       >Tips and Trick</a
                     >
                   </li>
@@ -91,81 +91,34 @@
       </nav>
     </header>
     <main>
-      <div
-        class="bg-image text-white text-start d-flex align-items-up p-5"
-        style="
-          background-image: url('./src/img/Lindungi-hutan.webp');
-          height: 100vh;
-          background-size: cover;
-          background-position: center;
-          font-size: larger;
-        "
-      >
-        <div class="p-5">
-          <h1 class="display-1 fw-bold">Ecolearn</h1>
-          <p class="fs-3">Edukasi adalah kunci perubahan.</p>
-          <p class="fs-3">
-            Dengan EcoLearn, mari kita bangun kebiasaan ramah lingkungan
-          </p>
-        </div>
-      </div>
-      <!-- Konten Utama -->
-      <div>
-        <div class="container-fluid bg-success text-white p-5">
-          <div class="row align-items-center">
-            <!-- Kolom Kiri: Selamat Datang -->
-            <div class="col-md-6">
-              <h1 class="fw-bold">Halo, Selamat Datang!</h1>
-              <p>
-                Selamat datang di EcoLearn, platform yang memberikan edukasi
-                tentang gaya hidup ramah lingkungan.
-              </p>
-            </div>
-  
-            <!-- Kolom Kanan: Penjelasan EcoLearn -->
-            <div class="col-md-6 d-flex flex-column justify-content-center">
-              <h2 class="fw-bold">Apa itu EcoLearn?</h2>
-              <p>
-                EcoLearn adalah platform edukasi yang bertujuan untuk meningkatkan
-                kesadaran tentang pentingnya gaya hidup ramah lingkungan. Kami
-                menyediakan berbagai sumber belajar seperti kalkulator jejak
-                karbon, artikel edukasi, komunitas diskusi, serta tips praktis
-                untuk mengurangi dampak lingkungan. Dengan EcoLearn, kita bisa
-                belajar dan mengambil tindakan nyata demi bumi yang lebih hijau.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
     </main>
     <footer class="bg-light text-dark pt-5 pb-4">
-      <div class="container">
-        <div class="row align-items-center">
-          <!-- Kolom Kiri (EcoLearn & Deskripsi) -->
-          <div class="col-md-6">
-            <h5 class="fw-bold">EcoLearn</h5>
-            <p>Platform edukasi untuk gaya hidup ramah lingkungan dan konservasi alam.</p>
-            <p class="text-muted">© 2025 EcoLearn - made with 💚</p>
-          </div>
-    
-          <!-- Kolom Kanan (Quote) -->
-          <div class="col-md-6">
-            <div>
-              <div class="card-header">Quote</div>
-              <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                  <p>Trees are poems that the earth writes upon the sky</p>
-                  <footer class="blockquote-footer">
-                    Kahlil Gibran <cite title="Source Title"></cite>
-                  </footer>
-                </blockquote>
+        <div class="container">
+          <div class="row align-items-center">
+            <!-- Kolom Kiri (EcoLearn & Deskripsi) -->
+            <div class="col-md-6">
+              <h5 class="fw-bold">EcoLearn</h5>
+              <p>Platform edukasi untuk gaya hidup ramah lingkungan dan konservasi alam.</p>
+              <p class="text-muted">© 2025 EcoLearn - made with 💚</p>
+            </div>
+      
+            <!-- Kolom Kanan (Quote) -->
+            <div class="col-md-6">
+              <div>
+                <div class="card-header">Quote</div>
+                <div class="card-body">
+                  <blockquote class="blockquote mb-0">
+                    <p>Trees are poems that the earth writes upon the sky</p>
+                    <footer class="blockquote-footer">
+                      Kahlil Gibran <cite title="Source Title"></cite>
+                    </footer>
+                  </blockquote>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
-    <!-- CDN for Bootstrap -->
+      </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
